--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
+    "cross-fetch": "^2.1.0",
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^2.3.0",
     "reactstrap": "^9.1.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,17 +46,17 @@
       "last 1 safari version"
     ]
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-confusion).",
   "main": "index.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AgniveshChaubey/react-web-app.git"
+    "url": "git+https://github.com/AgniveshChaubey/react-confusion.git"
   },
   "author": "Agnivesh Chaubey",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/AgniveshChaubey/react-web-app/issues"
+    "url": "https://github.com/AgniveshChaubey/react-confusion/issues"
   },
-  "homepage": "https://github.com/AgniveshChaubey/react-web-app#readme"
+  "homepage": "https://github.com/AgniveshChaubey/react-confusion/#readme",
+  "devDependencies": {}
 }
